registro de mascotas completo (QR y fotos normalizadas)