@@ -1,11 +1,13 @@
 package domain.controllers;
 
-import db.EntityManagerHelper;
 import domain.controllers.utils.UtilsRequest;
 import domain.entities.mascotas.*;
 import domain.entities.organizaciones.Organizacion;
 import domain.entities.organizaciones.PreguntasONG.Atributo;
 import domain.entities.usuarios.Usuario;
+import domain.entities.utils.QR.GeneradorQRRescate;
+import domain.entities.utils.QR.QR;
+import domain.entities.utils.normalizador.NormalizadorDeImagen.NormalizarImagen;
 import domain.repositories.Repositorio;
 import domain.repositories.factories.FactoryRepositorio;
 import org.apache.commons.io.IOUtils;
@@ -14,9 +16,8 @@ import spark.Request;
 import spark.Response;
 
 import javax.servlet.MultipartConfigElement;
-import javax.servlet.ServletException;
 import javax.servlet.http.Part;
-import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 
@@ -42,15 +43,17 @@ public class MascotaController {
         Map<String,Object> params = new HashMap<>();
 
         Usuario usuario = this.repoUsuarios.buscar(Integer.valueOf(idUsuario));
-        List<Organizacion> organizaciones= (List<Organizacion>) this.organizaciones.buscarTodos();
+        List<Organizacion> organizaciones= this.organizaciones.buscarTodos();
         Organizacion organizacionMasCercana = usuario.getOrganizacionMasCercana(organizaciones);
         params.put("usuario", usuario);
         params.put("org",organizacionMasCercana);
         return new ModelAndView(params, "registro_mascota.hbs");
     }
 
-    public Response guardarMascota(Request request, Response response) throws ServletException, IOException {
+    public Response guardarMascota(Request request, Response response) throws Exception {
         request.attribute("org.eclipse.jetty.multipartConfig", new MultipartConfigElement("/temp"));
+        List<InputStream> streamDeFotos = new ArrayList<>();
+
         String idDuenio = request.params("id");
         String idOrganizacion = UtilsRequest.ObtainAttributeByName(request,"organizacion");
         Usuario usuario = this.repoUsuarios.buscar(Integer.valueOf(idDuenio));
@@ -59,9 +62,7 @@ public class MascotaController {
         MascotaRegistrada mascota = new MascotaRegistrada();
         mascota.setDuenio(usuario);
         mascota.setOrganizacion(organizacion);
-
-        foto_mascota fotomascota = new foto_mascota();
-
+        ///
         Collection<Part> part = request.raw().getParts();
         Iterator<Part> iterator = part.iterator();
         Part partAux;
@@ -106,7 +107,7 @@ public class MascotaController {
                         mascota.setEstaCastrado(Boolean.FALSE);
                     break;
                 case "files":
-                        System.out.println(value);
+                        streamDeFotos.add(partAux.getInputStream()); //guardamos las fotos hasta que persistamos las mascota y obtengamos un ID
                         break;
                 case "edad_mascota":
                     if(value.equals("cachorro"))
@@ -124,23 +125,15 @@ public class MascotaController {
 
                 // Si no son atributos de plataforma son caracteristicas de organizacion
                 default:
-                    //System.out.println(name);
-                    //System.out.println(value);
-                    //TODO: recorta el string "pregunta_x" y devuelve x, esta medio hardcodeado xd
 
-                    String idAtributo = name.substring(9);
-                    System.out.println(idAtributo);
+                    String idAtributo = name.substring(9); //TODO: recorta el string "pregunta_x" y devuelve x, esta medio hardcodeado xd
 
                     CaracteristicasONG caracteristica = new CaracteristicasONG();
-                    organizacion.getPreguntasRequeridas().stream().forEach( a -> System.out.println("Atributo: "+ a.getId()));
                     Atributo atributo = organizacion.getPreguntasRequeridas().stream().filter( a -> a.getId()==Integer.valueOf(idAtributo)).findFirst().get();
-                    System.out.println(atributo.getCaracteristicaNombre());
-                    System.out.println(value);
                     caracteristica.setMascotaRegistrada(mascota);
                     caracteristica.setNombreCaracteristica(atributo.getCaracteristicaNombre());
                     caracteristica.setRespuesta(value);
                     mascota.getCaracteristicas().add(caracteristica);
-
                     break;
 
 
@@ -148,22 +141,40 @@ public class MascotaController {
 
         }
 
+           repoMascotaRegistrada.agregar(mascota); // A partir de aca tiene una id unica en la DB, con eso se puede crear rutas unicas para las fotos y QRs
+
+            // Normalizar fotos
+            for (int i = 0 ; i<streamDeFotos.size(); i++){
+                FotoMascota foto = new FotoMascota();
+                foto.setEsRutaLocal(Boolean.TRUE);
+                foto.guardarFoto(mascota,IOUtils.toByteArray(streamDeFotos.get(i)),i+1);
+                NormalizarImagen normalizador = new NormalizarImagen(foto,organizacion.getEstandarImagen().getCalidadImagen(),organizacion.getEstandarImagen().getTamanioImagen());
+                normalizador.normalizar();
+                mascota.getFotosMascota().add(foto);
+            }
+            //QR
+            QR qrMascota = new QR();
+            GeneradorQRRescate generadorQR = new GeneradorQRRescate();
+            qrMascota.setURL(generadorQR.crearQR(mascota,mascota.getDuenio()));
+            mascota.setQrMascota(qrMascota);
+            //
             repoMascotaRegistrada.agregar(mascota);
+
+            /*
             System.out.println(mascota.getNombre());
             System.out.println(mascota.getApodo());
             System.out.println(mascota.getTipoMascota());
             System.out.println("duenio nombre : "+mascota.getDuenio().getNombre());
             System.out.println(mascota.getEdadAproximada());
             System.out.println("id de la mascota!!!"+mascota.getId());
-
-
+             */
 
         return response;
 
     }
 
     public ModelAndView mostrar(Request request, Response response) {
-        Mascota mascota = this.repo.buscar(new Integer(request.params("id")));
+        Mascota mascota = this.repo.buscar(Integer.valueOf(request.params("id")));
         Map<String, Object> params = new HashMap<>();
         params.put("mascota", mascota);
 
@@ -186,7 +197,7 @@ public class MascotaController {
         String nombre = request.params("nombre");
         String apodo = request.params("apodo");
 
-        MascotaRegistrada mascota = this.repoMascotaRegistrada.buscar(new Integer(id));
+        MascotaRegistrada mascota = this.repoMascotaRegistrada.buscar(Integer.valueOf(id));
         mascota.setNombre(nombre);
         mascota.setApodo(apodo);
         this.repoMascotaRegistrada.modificar(mascota);
